# ps280edit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/ps280edit/: build.py  ps280edit.py  ps280edit.yaml  requirements.txt  untitled.txt
src/ps280edit/defaults/database/PS-280.ps280/up.ps280/: config.toml
src/ps280edit/defaults/firmware/0.12.0.35.34ae7f5a.20250502_111913/: fw.bat
src/ps280edit/defaults/firmware/0.2.0/.DAV/: .state_for_dir.pag  bootloader.bin.pag  partition-table.bin.pag  pikk-sense-esp32s3.bin.pag
src/ps280edit/defaults/firmware/0.3.13.73.42372a1/.DAV/: .state_for_dir.pag  bootloader.bin.pag  partition-table.bin.pag  pikk-sense-esp32-main.bin.pag
src/ps280edit/defaults/firmware/0.3.16.18.54f990f/.DAV/: .state_for_dir.pag  bootloader.bin.pag  partition-table.bin.pag  pikk-sense-esp32-main.bin.pag
src/ps280edit/defaults/firmware/0.3.5.2434/.DAV/: .state_for_dir.pag  bootloader.bin.pag  partition-table.bin.pag  pikk-sense-esp32s3.bin.pag
src/ps280edit/defaults/firmware/0.7.0.481.c22c85e/: flash.bat
src/ps280edit/defaults/templates/: config.toml  modified_config.toml  udk_defaults.toml
src/ps280edit/docs/: parameterbeschreibung.md
src/ps280edit/lib/: backend.py  custom_elements.py  frontend.py  real_time_output_overlay.py
src/ps280edit/lib/ps280_toolbox/: PS_280.py  __init__.py  logger.py  serial_util.py_old
src/ps280edit/lib/stickertool/: __init__.py  stickertool.py
src/ps280edit/lib/stickertool/cfg/: stickertool.yaml
src/ps280edit/lib/stickertool/submodules/: stickertool.py
(+21 files in other folders)
